# disco

./: .cmt  .dir-locals.el  .gitignore  .hlint.yaml  .mergify.yml  .readthedocs.yaml  .restyled.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Setup.hs  add-test-files.hs  build  cabal.project  containers-spec.md  copyright-example.txt  disco.cabal  feedback.yaml  hie.yaml  notes.org  sandbox.sh  stack.yaml  test\file.disco  tydefs.disco
.github/ISSUE_TEMPLATE/: bug_report.md  confusion-report.md  feature_request.md
.github/workflows/: Notify.yml.save  ci.yml  haskell-ci.yml  irc.yml
docs/: Makefile  README.md  build  conf.py  feedback.yaml  index.rst  requirements.txt
docs/images/: diamond.dvi  diamond.tex
docs/introduction/: algebraic.rst  arithmetic.rst  booleans.rst  files.rst  functions.rst  getting-started.rst  index.rst  lists.rst  number-theory.rst  pairs.rst  polymorphism.rst  sets.rst  types.rst  variables.rst  vars-and-types.rst
docs/reference/: .#string.rst  REPL.rst  abs.rst  addition.rst  algebraic-types.rst  ambiguous.rst  anonymous-func.rst  arith-pattern.rst  arithmetic.rst  bag.rst  base-types.rst  binomial.rst  bool.rst  boom.rst  case.rst  char.rst  collection-ops.rst  collection-types.rst  collections.rst  combinatorics.rst  comment.rst  compare.rst  comprehension.rst  container-ops.rst  cp.rst  cyc-ty.rst  def-vs-test.rst  definition.rst  divides.rst  division.rst  docs.rst  dup-def.rst  dup-sig.rst  dup-tydef.rst  each.rst  ellipsis.rst  empty-case.rst  errors.rst  exponentiation.rst  expression.rst  (+75 more)
docs/tutorial/: arithmetic.rst  case.rst  containers.rst  files.rst  functions.rst  index.rst  laziness.rst  lists.rst  logic.rst  polymorphism.rst  properties.rst  starting.rst  structure.rst  typedefs.rst  types.rst
error-examples/: extEuclidAlgErr.disco  modPowerErr.disco
example/: TestExamples.hs  abs.disco  catalan.disco  demo.disco  expensive-list.disco  fib.disco  fiblist.disco  gcd.disco  grid.disco  lists.disco  lists.ds  logic.disco  logic.ds  nim.disco  prime.disco  prime.ds  prog.disco  prop-test.disco  prop.disco  rsa.disco  sums.disco  tree.disco  truthtable.disco
example/ideas/: Turing.disco
explore/: STLC.hs
explore/arith-pat/: ArithPat.agda  ArithPat.hs  LICENSE  arith-pat.cabal
explore/arith-pat/lib/: ArithmeticPattern.hs  SemilinearSet.hs
explore/arith-pat/test/: Main.hs  TestArithmeticPattern.hs  TestSemilinearSet.hs
explore/bi+poly+sub/: .bipolysub_history  BiPolySub.hs  ChangeLog.md  Graph.hs  LICENSE  Parsing2.hs  bi-poly-sub.cabal  bi-poly-sub.ott  stack.yaml
explore/cek/: KPCF-CEK.hs  PCF-CEK.hs  SFCP-CEK.hs  SystemT-CEK.hs  add.txt  stream.txt
explore/listcomp/: LazyMList.hs  Listcomp.hs  Listcomp2.hs
explore/lower-your-guards/: lower-your-guards.cabal  stack.yaml
explore/lower-your-guards/notes/: the_ordered_bug.html  the_ordered_bug.md
explore/lower-your-guards/src/: Annotated.hs  Fresh.hs  GuardTree.hs  Inhabitants.hs  Inhabitants2.hs  Main.hs  MatchInfo.hs  MatchTree.hs  Parse.hs  Play.hs  Possibilities.hs  Types.hs  UA.hs  Uncovered.hs
explore/lower-your-guards/test/: bool1.disc  bool2.disc  complex1.disc  complex2.disc  complex22.disc  complex3.disc  complex4.disc  complex5.disc  either.disc  pair1.disc  pair2.disc  pair3.disc  pair4.disc  pair5.disc  pair6.disc  t1.disc  test1.disc  test2.disc  throol1.disc  throol2.disc  triple1.disc
explore/poly-sub/: PolySub.hs  poly-sub.cabal
explore/provenance/: LICENSE  STLCBidirProvenance.hs  STLCProvenance.hs  STLCSimpleProvenance.hs  stlc-provenance.cabal
explore/simple-alg-subtyping/: AlgSub.hs
explore/sub/: Main.hs  Sub.hs  sub.cabal
explore/sub+qual/: SubQual.hs  sub-qual.cabal
explore/sub2/: Atoms.hs  Constraints.hs  Main.hs  Solve.hs  Sub2.hs  Subst.hs  Types.hs  Unify.hs  sub2.cabal
explore/system-f/: CHANGELOG.md  STLCRecon.hs  SystemFRecon.hs  system-f.cabal
explore/tries/: Trie.hs
explore/typecheck/: ICFP.agda  ICFPPrelude.agda  NontypingDerivation.agda  NontypingDerivation.lagda.md  Typecheck.agda  Typecheck.hs  UntypingCons.agda  UntypingPairs.agda
failing/: nim.disco
failing/lib-oeis/: expected
failing/pretty-issue258/: expected
lib/: container.disco  graph.disco  list.disco  num.disco  oeis.disco  prim.disco  product.disco  prop.disco  string.disco
multirec-test/: LICENSE  stack.yaml
notes/: containers-spec.md  decimals.org  ideas.org  notes.org  operators.org
notes/multirec-test/: ChangeLog.md  MultiRec.hs  MultiRecSimple.hs  stack.yaml  test.cabal
notes/old/: parsing.org
nsf/: Makefile  bay-bio.tex  broader-impacts.tex  comm-results.tex  data-management.tex  description.lhs  evaluation.tex  hde-bio.tex  lists.ds  logic.ds  main.lhs  personnel.txt  prime.ds  references.bib  related-work.tex  summary.tex  team-qual.tex
nsf/budget/: Makefile  budget-justification.tex
nsf/budget-Hendrix/: budget-justification.tex
nsf/diagrams/: Examples.hs  Examples.pgf  GCD.hs  GCD.pgf
nsf/facilities-equipment/: Makefile  fac-eq.tex
nsf/reviews/: review1.txt  review2.txt  review3.txt  review4.txt
old-code/: Core.hs  Eval.hs
ott/: Makefile  disco.ott  nums.ott  simple.ott  sub-qual.ott
ott/old/: quantified.ott  simple.ott
pubs/OBT18/: acode.sty  explaining-errors.bib  explaining-errors.tex  explanation-oriented-types.tex  notes.org  obt18-reviews-11.txt
pubs/TFPIE23/: disco-tfpie23-03-28.xopp  disco-tfpie23-12-26-09:51.xopp  disco-tfpie23-12-26_09-51.xopp  disco-tfpie23.dvi  disco-tfpie23.ps  disco-tfpie23.tex  eptcs.bst  eptcs.cls  eptcsalpha.bst  eptcsalphaini.bst  eptcsini.bst  generic.bib  references.bib
pubs/WG2.1/: build.sh  (+2 more)
reference/: .type-inference-with-subtypes.pdf.icloud  bibliography.org  references.bib
repl/: Queue.hs  REPL.hs
src/: Desugar.hs  Interp.hs  InterpD.hs  Parser.hs  Pretty.hs  Queue.hs  REPL.hs  Typecheck.hs  Types.hs
test/: README.md  Tests.hs
tofix/: cw.disco
tools/: disco.py
web/: CHANGELOG.md  LICENSE  disco-wasm.cabal  disco-wasm.js  index.html  pointfree-wasm-LICENSE
web/app/: DiscoWASM.hs
web/cbits/: init.c
(+655 files in other folders)
