name:                disco
version:             0.1.0.0
synopsis:            Functional programming language for teaching discrete math.
description:         Disco is a simple functional programming language for use in
                     teaching discrete math.  Its syntax is designed to be close
                     to standard mathematical practice.
license:             BSD3
license-file:        LICENSE
author:              Disco team
maintainer:          byorgey@gmail.com
copyright:           Disco team 2016 (see LICENSE)
category:            Language

tested-with:         GHC == 8.6.3

data-dir:            lib

data-files:          *.disco

extra-source-files:  README.md, stack.yaml, example/*.disco, repl/*.hs
                     docs/tutorial/example/*.disco
                     --- TEST FILES BEGIN (updated automatically by add-test-files.hs) ---
                     test/README.md
                     test/Tests.hs
                     test/arith-basic-bin/expected
                     test/arith-basic-bin/input
                     test/arith-basic-un/expected
                     test/arith-basic-un/input
                     test/arith-count/expected
                     test/arith-count/input
                     test/arith-numthry/expected
                     test/arith-numthry/input
                     test/arith-prim/arith-prim.disco
                     test/arith-prim/expected
                     test/arith-prim/input
                     test/arith-round/expected
                     test/arith-round/input
                     test/bag-ops/expected
                     test/bag-ops/input
                     test/case-arith/case-arith.disco
                     test/case-arith/expected
                     test/case-arith/input
                     test/case-basic/case-basic.disco
                     test/case-basic/expected
                     test/case-basic/input
                     test/case-let/case-let.disco
                     test/case-let/expected
                     test/case-let/input
                     test/compile-cons/expected
                     test/compile-cons/input
                     test/container-comp/expected
                     test/container-comp/input
                     test/container-ops/expected
                     test/container-ops/input
                     test/containers-cmp/expected
                     test/containers-cmp/input
                     test/containers-convert/expected
                     test/containers-convert/input
                     test/containers-ellipsis/expected
                     test/containers-ellipsis/input
                     test/containers-filter/expected
                     test/containers-filter/input
                     test/containers-join/expected
                     test/containers-join/input
                     test/containers-map/expected
                     test/containers-map/input
                     test/containers-merge/expected
                     test/containers-merge/input
                     test/containers-reduce/containers-reduce.disco
                     test/containers-reduce/expected
                     test/containers-reduce/input
                     test/interp-fibs/expected
                     test/interp-fibs/fiblist.disco
                     test/interp-fibs/input
                     test/interp-gc/expected
                     test/interp-gc/input
                     test/interp-lazymatch/bomb.disco
                     test/interp-lazymatch/expected
                     test/interp-lazymatch/input
                     test/list-comp/expected
                     test/list-comp/input
                     test/list-poly/expected
                     test/list-poly/input
                     test/logic-bools/expected
                     test/logic-bools/input
                     test/logic-cmp/expected
                     test/logic-cmp/input
                     test/module-basic/a.disco
                     test/module-basic/b.disco
                     test/module-basic/c.disco
                     test/module-basic/e.disco
                     test/module-basic/expected
                     test/module-basic/input
                     test/module-basic/subdir/d.disco
                     test/parse-case-expr/expected
                     test/parse-case-expr/input
                     test/parse-nested-list/expected
                     test/parse-nested-list/input
                     test/parse-quantifiers/expected
                     test/parse-quantifiers/input
                     test/poly-bad/expected
                     test/poly-bad/input
                     test/poly-infer-sort/expected
                     test/poly-infer-sort/input
                     test/poly-instantiate/expected
                     test/poly-instantiate/input
                     test/poly-instantiate/poly-instantiate.disco
                     test/pretty-functions/expected
                     test/pretty-functions/input
                     test/pretty-lazy/expected
                     test/pretty-lazy/input
                     test/pretty-type/expected
                     test/pretty-type/input
                     test/pretty-whnf/expected
                     test/pretty-whnf/input
                     test/prop-basic/expected
                     test/prop-basic/input
                     test/prop-basic/prop-basic.disco
                     test/prop-cmp/expected
                     test/prop-cmp/input
                     test/prop-holds/expected
                     test/prop-holds/input
                     test/prop-impredicative/expected
                     test/prop-impredicative/input
                     test/prop-impredicative/prop-impredicative.disco
                     test/prop-type/expected
                     test/prop-type/input
                     test/props-basic/expected
                     test/props-basic/input
                     test/props-basic/props-basic.disco
                     test/props-fail/bad-tests.disco
                     test/props-fail/expected
                     test/props-fail/input
                     test/repl-compile/expected
                     test/repl-compile/input
                     test/repl-defn/expected
                     test/repl-defn/input
                     test/repl-defns/expected
                     test/repl-defns/input
                     test/repl-desugar/expected
                     test/repl-desugar/input
                     test/repl-import/expected
                     test/repl-import/input
                     test/solver-issue112/diag-iso-bad.disco
                     test/solver-issue112/expected
                     test/solver-issue112/input
                     test/syntax-chain/expected
                     test/syntax-chain/inRange.disco
                     test/syntax-chain/input
                     test/syntax-clause/clauses.disco
                     test/syntax-clause/expected
                     test/syntax-clause/input
                     test/syntax-comment/expected
                     test/syntax-comment/fib.disco
                     test/syntax-comment/input
                     test/syntax-containers/expected
                     test/syntax-containers/input
                     test/syntax-decimals/expected
                     test/syntax-decimals/input
                     test/syntax-doc/expected
                     test/syntax-doc/input
                     test/syntax-doc/syntax-doc.disco
                     test/syntax-exts/expected
                     test/syntax-exts/input
                     test/syntax-exts/syntax-exts.disco
                     test/syntax-juxt-app/expected
                     test/syntax-juxt-app/input
                     test/syntax-juxt-app/juxt-app.disco
                     test/syntax-juxt-mul/expected
                     test/syntax-juxt-mul/input
                     test/syntax-juxt-mul/juxt-mul.disco
                     test/syntax-lambda-pat/expected
                     test/syntax-lambda-pat/input
                     test/syntax-lambda/expected
                     test/syntax-lambda/input
                     test/syntax-let/expected
                     test/syntax-let/input
                     test/syntax-many-args/expected
                     test/syntax-many-args/input
                     test/syntax-many-args/many-args.disco
                     test/syntax-many-clauses/expected
                     test/syntax-many-clauses/input
                     test/syntax-many-clauses/many-clauses.disco
                     test/syntax-patclause/expected
                     test/syntax-patclause/fact.disco
                     test/syntax-patclause/input
                     test/syntax-prims/expected
                     test/syntax-prims/input
                     test/syntax-prims/syntax-prims.disco
                     test/syntax-tuples/expected
                     test/syntax-tuples/input
                     test/syntax-types/expected
                     test/syntax-types/input
                     test/types-bind/expected
                     test/types-bind/input
                     test/types-char-string/expected
                     test/types-char-string/input
                     test/types-compare/expected
                     test/types-compare/input
                     test/types-container/expected
                     test/types-container/input
                     test/types-ops/expected
                     test/types-ops/input
                     test/types-rational/expected
                     test/types-rational/input
                     test/types-rec/expected
                     test/types-rec/types-rec.disco
                     test/types-squash/expected
                     test/types-squash/input
                     test/types-standalone-ops/expected
                     test/types-standalone-ops/input
                     test/types-tydef-param/expected
                     test/types-tydef-param/input
                     test/types-tydef-param/types-tydef-param.disco
                     test/types-tydefs/expected
                     test/types-tydefs/input
                     test/types-tydefs/types-tydefs.disco
                     --- TEST FILES END ---

cabal-version:       1.18
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/disco-lang/disco.git

library
  exposed-modules:
                       Disco.Syntax.Operators
                       Disco.Syntax.Prims
                       Disco.Extensions
                       Disco.AST.Core
                       Disco.AST.Desugared
                       Disco.AST.Generic
                       Disco.AST.Surface
                       Disco.AST.Typed
                       Disco.Context
                       Disco.Messages
                       Disco.Module
                       Disco.Parser
                       Disco.Pretty
                       Disco.Property
                       Disco.Desugar
                       Disco.Compile
                       Disco.Eval
                       Disco.Interpret.Core
                       Disco.Subst
                       Disco.Typecheck
                       Disco.Typecheck.Constraints
                       Disco.Typecheck.Erase
                       Disco.Typecheck.Graph
                       Disco.Typecheck.Monad
                       Disco.Typecheck.Solve
                       Disco.Typecheck.Unify
                       Disco.Types
                       Disco.Types.Qualifiers
                       Disco.Types.Rules
                       Disco.Util
                       Disco.Interactive.Eval
                       Disco.Interactive.Parser
                       Disco.Interactive.CmdLine

  other-modules:       Paths_disco
  autogen-modules:     Paths_disco

  other-extensions:
                       GADTs
                       RankNTypes
                       TypeFamilies
                       ViewPatterns
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       NondecreasingIndentation
                       TemplateHaskell
                       UndecidableInstances

  build-depends:       base >=4.8 && <4.14,
                       filepath,
                       directory,
                       mtl >=2.2 && <2.3,
                       megaparsec >= 6.1.1 && < 8.1,
                       parser-combinators >= 1.0.0 && < 1.3,
                       pretty >=1.1 && <1.2,
                       split >= 0.2 && < 0.3,
                       transformers >= 0.4 && < 0.6,
                       containers >=0.5 && <0.7,
                       unbound-generics >= 0.3 && < 0.5,
                       lens >= 4.14 && < 4.19,
                       exact-combinatorics >= 0.2 && < 0.3,
                       arithmoi >= 0.10 && < 0.11,
                       integer-logarithms >= 1.0 && < 1.1,
                       haskeline >=0.7 && <0.8,
                       QuickCheck >= 2.9 && < 2.14,
                       fgl >= 5.5 && < 5.8,
                       optparse-applicative >= 0.12 && < 0.16

  hs-source-dirs:      src
  default-language:    Haskell2010

executable disco
  hs-source-dirs:      repl
  main-is:             REPL.hs
  build-depends:       base,
                       disco,
                       directory,
                       filepath,
                       haskeline >=0.7 && <0.8,
                       mtl >=2.2 && <2.3,
                       transformers >= 0.4 && < 0.6,
                       megaparsec >= 6.1.1 && < 8.1,
                       containers >= 0.5 && < 0.7,
                       unbound-generics >= 0.3 && < 0.5,
                       lens >= 4.14 && < 4.19,
                       optparse-applicative >= 0.12 && < 0.16

  default-language:    Haskell2010

test-suite disco-tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  ghc-options: -threaded
  build-depends:    base >= 4.7 && < 4.14,
                    tasty >= 0.10 && < 1.3,
                    tasty-golden >= 2.3 && < 2.4,
                    directory >= 1.2 && < 1.4,
                    filepath >= 1.4 && < 1.5,
                    process >= 1.4 && < 1.7,
                    bytestring >= 0.9 && < 0.11,
                    disco
  default-language: Haskell2010

test-suite disco-examples
  type: exitcode-stdio-1.0
  main-is: TestExamples.hs
  hs-source-dirs: example
  ghc-options: -threaded
  build-depends:    base >= 4.7 && < 4.14,
                    directory >= 1.2 && < 1.4,
                    filepath >= 1.4 && < 1.5,
                    process >= 1.4 && < 1.7
  default-language: Haskell2010
